Bug 275158 - Another mistype in PostgreSQL codegenerator types list (trivial).
Summary: Another mistype in PostgreSQL codegenerator types list (trivial).
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-07 22:19 UTC by Nikita Skovoroda
Modified: 2013-11-06 17:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Skovoroda 2011-06-07 22:19:49 UTC
Version:           unspecified (using Devel) 
OS:                Linux

http://websvn.kde.org/trunk/KDE/kdesdk/umbrello/umbrello/codegenerators/sql/postgresqlwriter.cpp?view=markup

72	    l.append( "time without time zone" );
73	    l.append( "time with time zone" );
74	    l.append( "timestamp without time zone" );
75	    l.append( "time with time zone" );

should be replaced by

72	    l.append( "time without time zone" );
73	    l.append( "time with time zone" );
74	    l.append( "timestamp without time zone" );
75	    l.append( "timestamp with time zone" );

Reproducible: Always

Steps to Reproduce:
Select „PostgreSQL“ language.

Actual Results:  
The types are filled.
„timestamp with time zone“ is missing.

Expected Results:  
„timestamp with time zone“ is present after the types are filled.

http://www.postgresql.org/docs/9.0/interactive/datatype-datetime.html
Comment 1 Nikita Skovoroda 2012-05-22 15:33:55 UTC
Hello?
Comment 2 Nikita Skovoroda 2012-05-22 20:03:05 UTC
This is trivial, too ;-).
Comment 3 Oliver Kellogg 2012-05-23 18:24:22 UTC
(In reply to comment #1)
> Hello?

Echo :)
Comment 4 Oliver Kellogg 2012-05-23 18:34:24 UTC
SVN commit 1296317 by okellogg:

PostgreSQLWriter::defaultDatatypes(): Fix last list entry as proposed in PR.
Thanks Nikita for well written bug reports.



 M  +1 -0      ChangeLog  
 M  +1 -1      umbrello/codegenerators/sql/postgresqlwriter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1296317
Comment 5 Ralf Habacker 2013-11-06 17:15:49 UTC
apply fixed bug from 4.9.0 changelog