PostgreSQLWriter::defaultDatatypes(): Fix last list entry as proposed in PR. Thanks Nikita for well written bug reports.

BUG: 275158

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1296317